--- a/NOAA_climo_percentiles.ipynb
+++ b/NOAA_climo_percentiles.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN6C0BUynm7n08jIA9iIcLC",
+      "authorship_tag": "ABX9TyMg3/GRSY6CUXOGvLlEhSCO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,9 +61,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gS2pMadxpHu-",
-        "outputId": "943342e3-68a0-4179-c1c2-2fa90eaa903d"
+        "outputId": "7fa94181-e6c6-4c68-b890-3c49fc6bc9d6"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
           "text": [
             "Collecting cartopy\n",
             "  Downloading Cartopy-0.21.1.tar.gz (10.9 MB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/10.9 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.2/10.9 MB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:02\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/10.9 MB\u001b[0m \u001b[31m24.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/10.9 MB\u001b[0m \u001b[31m65.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m10.9/10.9 MB\u001b[0m \u001b[31m136.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m10.9/10.9 MB\u001b[0m \u001b[31m136.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.9/10.9 MB\u001b[0m \u001b[31m78.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.9/10.9 MB\u001b[0m \u001b[31m49.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
@@ -80,7 +80,7 @@
             "Requirement already satisfied: shapely>=1.6.4 in /usr/local/lib/python3.10/dist-packages (from cartopy) (2.0.1)\n",
             "Collecting pyshp>=2.1 (from cartopy)\n",
             "  Downloading pyshp-2.3.1-py2.py3-none-any.whl (46 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.5/46.5 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.5/46.5 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: pyproj>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from cartopy) (3.6.0)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.1->cartopy) (1.1.0)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.1->cartopy) (0.11.0)\n",
@@ -94,7 +94,7 @@
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib>=3.1->cartopy) (1.16.0)\n",
             "Building wheels for collected packages: cartopy\n",
             "  Building wheel for cartopy (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for cartopy: filename=Cartopy-0.21.1-cp310-cp310-linux_x86_64.whl size=11102744 sha256=efd24a49f9c473336625db46c9849c678fd143ba63be3c9bb1fed3266caa7428\n",
+            "  Created wheel for cartopy: filename=Cartopy-0.21.1-cp310-cp310-linux_x86_64.whl size=11102748 sha256=2afe12ac46e1a875803429ed20156146b0571532962e57628e6a7f97b2cd6f1d\n",
             "  Stored in directory: /root/.cache/pip/wheels/30/b0/1a/1c1909e00c76653dc4e2ff48555257c0eb2d1698280c8d9955\n",
             "Successfully built cartopy\n",
             "Installing collected packages: pyshp, cartopy\n",
@@ -106,7 +106,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Import Necessary Packages"
+        "## Import Necessary Packages and Functions"
       ],
       "metadata": {
         "id": "XVDCj-dWpZre"
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "ezlov0crFrmX"
       },
@@ -126,6 +126,62 @@
         "import matplotlib.pyplot as plt\n",
         "import fsspec"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def var_read_plot(url:str, var_type:str, ptile:int, time_step:str,\n",
+        "                  dates:list, smooth:bool)-> xr.DataSet:\n",
+        "  \"\"\" Function to readin CPC percentile data given user inputs and plot\n",
+        "\n",
+        "  Parameters\n",
+        "  -----------\n",
+        "  :param url: ftp directory of CPC data\n",
+        "  :param var_type: variable type (tmax,tmin,tmean,precip,swe,wmax)\n",
+        "  :param ptile: percentile\n",
+        "  :param time_step: time_step for percentiles (1day,3day,4day,5day,7day,14day)\n",
+        "  :param dates: list of single day or dates depending on time_step\n",
+        "  :param smooth: True/False for smooth data\n",
+        "\n",
+        "  Returns\n",
+        "  --------\n",
+        "  :returns: view of xarray dataset\n",
+        "  \"\"\"\n",
+        "\n",
+        "  _s_str = '' if smooth else '_unsmoothed'\n",
+        "\n",
+        "  file = f'{url}/{var_type}/{tstep}/{}clim_ptiles_{tstep}{_unsmoothed_str}.nc'\n",
+        "\n",
+        "  var_dict = {}\n",
+        "\n",
+        "  with fsspec.open(url) as f:\n",
+        "      tmin = xr.open_dataset(f)\n",
+        "\n",
+        "      # Get min and max values for static plot\n",
+        "      max_val = tmin.sel(ptile=ptile_in,latitude=slice(35,30),longitude=slice(271,275)).tmin.min()\n",
+        "      min_val = tmin.sel(ptile=ptile_in,latitude=slice(35,30),longitude=slice(271,275)).tmin.max()\n",
+        "\n",
+        "      # Get latitude and longitude values for plotting text values\n",
+        "      lats = tmin.sel(latitude=slice(35,30),longitude=slice(271,275)).latitude.values\n",
+        "      lons = tmin.sel(latitude=slice(35,30),longitude=slice(271,275)).longitude.values\n",
+        "\n",
+        "      # Subset dataset in degrees F\n",
+        "      tmin_sub = (tmin.sel(ptile=ptile_in,date = date_str,latitude=slice(35,30),longitude=slice(271,275)).copy()*9/5)+32\n",
+        "\n",
+        "      fig, ax = plt.subplots(subplot_kw={'projection':ccrs.PlateCarree()})\n",
+        "      tmin_sub.tmin.plot(ax=ax,vmin=(min_val*9/5)+32,vmax=(max_val*9/5)+32,cmap='RdBu_r', cbar_kwargs={\"label\": \"Temperature ($^\\circ$F)\"})\n",
+        "      for i in lons:\n",
+        "        for j in lats:\n",
+        "            ax.text(i,j,f'{tmin_sub.sel(latitude=j,longitude=i).tmin.values:.2f}',ha='center',va='center',transform=ccrs.PlateCarree())\n",
+        "      ax.coastlines()\n",
+        "      ax.add_feature(cf.STATES)\n",
+        "      ax.set_title(f\"Tmin {ptile_in} Percentile for {date_str.split('-')[1]}-{date_str.split('-')[2]}\")\n"
+      ],
+      "metadata": {
+        "id": "8ELwsE1pTvkv"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -142,10 +198,19 @@
         "\n",
         "---\n",
         "\n",
-        "This example will use the unsmoothed version of each variable but can be adapted easily by changing the link to the smoothed data version."
+        "This example will use the unsmoothed version of each variable but can be adapted easily by changing the input parameters to the `var_read_plot` function"
       ],
       "metadata": {
         "id": "pXdFHytApei_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `tmax` read and plot"
+      ],
+      "metadata": {
+        "id": "RMviRBC7PapF"
       }
     },
     {
@@ -189,7 +254,7 @@
       "source": [
         "# tmin read in\n",
         "with fsspec.open(url) as f:\n",
-        "   tmin = xr.open_dataset(f)\n",
+        "  tmin = xr.open_dataset(f)\n",
         "\n",
         "   # Get min and max values for static plot\n",
         "   max_val = tmin.sel(ptile=ptile_in,latitude=slice(35,30),longitude=slice(271,275)).tmin.min()\n",
@@ -706,10 +771,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### `pcpn` read and plot"
+      ],
+      "metadata": {
+        "id": "vQYlHfRbPbrq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "t9OFdvOTDXsY"
+        "id": "9hIlEEtSQOAz"
       },
       "execution_count": null,
       "outputs": []
